# matcha

authentication/: .env
backend/: Dockerfile  create-dbs.sh  docker-compose.env  docker-compose.yaml  initdb.sql  pyproject.toml
backend/src/: .env
backend/src/app/: main.py
backend/src/app/api/: __init__.py
backend/src/app/api/v1/: __init__.py  authentication.py  authentik.py  blocks.py  likes.py  message.py  notification.py  posts.py  reports.py  users.py  views.py
backend/src/app/core/: authentik.py  config.py  container.py  dependencies.py  logger.py  middleware.py  responce.py  security.py  setup.py
backend/src/app/core/db/: database.py  dbinit.py
backend/src/app/crud/: users_crud.py
backend/src/app/managers/: socketio_manager.py  websocket_manager.py
backend/src/app/repository/: base_repository.py  blocks_repository.py  likes_repository.py  message_repository.py  notification_repository.py  report_repository.py  user_repository.py  user_views_repository.py
backend/src/app/schemas/: likes.py  token.py  users.py
backend/src/app/services/: __init__.py  auth_interface.py  auth_service.py  base_service.py  blocks_interface.py  cloudinary_service.py  fame_rating_interface.py  geolocation_service.py  likes_interface.py  message_interface.py  notification_interface.py  reports_interface.py  socketio_manager_interface.py  user_interface.py  user_views_interface.py
backend/src/app/services/implementation/: auth_service_imp.py  blocks_interface_imp.py  fame_rating_imp.py  likes_interface_imp.py  message_interface_imp.py  notification_interface_imp.py  report_interface_imp.py  socketio_manager_imp.py  user_service_imp.py  user_views_imp.py
backend/src/app/socketio/: exception.py  socketio.py
backend/src/app/templates/: reset_password_template.html  verify_email_template.html
backend/src/app/websocket/: handlers.py  router.py  socketio.py
frontend/: howToRunTheBackend.txt  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  users.tsx
frontend/src/lib/: axios.ts
(+87 files in other folders)
